src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | COMPLEX
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | ContinueStmt ';'
  37       | PrintCompStmt ';'
  38       | RepeatStmt
  39       | SwitchStmt
  40       | StmtBlock
  41       | Do ';'

  42  SimpleStmt : LValue '=' Expr
  43             | Call
  44             |

  45  Receiver : Expr '.'
  46           |

  47  LValue : Receiver IDENTIFIER
  48         | Expr '[' Expr ']'

  49  Call : Receiver IDENTIFIER '(' Actuals ')'

  50  Expr : LValue
  51       | Call
  52       | Constant
  53       | Super
  54       | Cases
  55       | Expr '+' Expr
  56       | Expr '-' Expr
  57       | Expr '*' Expr
  58       | Expr '/' Expr
  59       | Expr '%' Expr
  60       | Expr EQUAL Expr
  61       | Expr NOT_EQUAL Expr
  62       | Expr '<' Expr
  63       | Expr '>' Expr
  64       | Expr LESS_EQUAL Expr
  65       | Expr GREATER_EQUAL Expr
  66       | Expr AND Expr
  67       | Expr OR Expr
  68       | '(' Expr ')'
  69       | '-' Expr
  70       | '!' Expr
  71       | READ_INTEGER '(' ')'
  72       | READ_LINE '(' ')'
  73       | THIS
  74       | NEW IDENTIFIER '(' ')'
  75       | NEW Type '[' Expr ']'
  76       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  77       | '(' CLASS IDENTIFIER ')' Expr
  78       | DCOPY '(' Expr ')'
  79       | SCOPY '(' Expr ')'
  80       | RE Expr
  81       | IM Expr
  82       | COMPCAST Expr

  83  Constant : LITERAL
  84           | NULL

  85  Super : SUPER

  86  Actuals : ExprList
  87          |

  88  ExprList : ExprList ',' Expr
  89           | Expr

  90  WhileStmt : WHILE '(' Expr ')' Stmt

  91  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  92  BreakStmt : BREAK

  93  Cases : CASE '(' Expr ')' '{' CaseStmtList DefaultStmt '}'

  94  CaseStmtList : CaseStmtList CaseStmt
  95               |

  96  CaseStmt : Constant ':' Expr ';'

  97  DefaultStmt : DEFAULT ':' Expr ';'

  98  Do : DO DoStmtList OD

  99  DoStmtList : DoStmtList DOBLOCK DoStmt
 100             | DoStmt

 101  DoStmt : Expr ':' Stmt

 102  IfStmt : IF '(' Expr ')' Stmt ElseClause

 103  ElseClause : ELSE Stmt
 104             |

 105  ReturnStmt : RETURN Expr
 106             | RETURN

 107  PrintStmt : PRINT '(' ExprList ')'

 108  PrintCompStmt : PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 17
	Type : COMPLEX .  (10)

	.  reduce 10


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 42
	'}'  shift 63
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	DO  shift 70
	ContinueStmt  shift 71
	RepeatStmt  shift 72
	SwitchStmt  shift 73
	COMPCAST  shift 74
	PRINTCOMP  shift 75
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 76
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 77
	Stmt  goto 78
	SimpleStmt  goto 79
	IfStmt  goto 80
	WhileStmt  goto 81
	ForStmt  goto 82
	ReturnStmt  goto 83
	PrintStmt  goto 84
	BreakStmt  goto 85
	PrintCompStmt  goto 86
	Do  goto 87
	LValue  goto 88
	Expr  goto 89
	Call  goto 90
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 47
	Constant : NULL .  (84)

	.  reduce 84


state 48
	Expr : THIS .  (73)

	.  reduce 73


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (90)

	'('  shift 95
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (91)

	'('  shift 96
	.  error


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (102)

	'('  shift 97
	.  error


state 52
	ReturnStmt : RETURN . Expr  (105)
	ReturnStmt : RETURN .  (106)
	Receiver : .  (46)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46
	';'  reduce 106

	LValue  goto 98
	Expr  goto 99
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 53
	BreakStmt : BREAK .  (92)

	.  reduce 92


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (74)
	Expr : NEW . Type '[' Expr ']'  (75)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	IDENTIFIER  shift 101
	.  error

	Type  goto 102


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (107)

	'('  shift 103
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (71)

	'('  shift 104
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (72)

	'('  shift 105
	.  error


state 58
	Constant : LITERAL .  (83)

	.  reduce 83


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (76)

	'('  shift 106
	.  error


state 60
	Expr : '-' . Expr  (69)
	Receiver : .  (46)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46

	LValue  goto 98
	Expr  goto 107
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 61
	Expr : '!' . Expr  (70)
	Receiver : .  (46)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46

	LValue  goto 98
	Expr  goto 108
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 62
	Expr : '(' . Expr ')'  (68)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (77)
	Receiver : .  (46)

	CLASS  shift 109
	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46

	LValue  goto 98
	Expr  goto 110
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 63
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 64
	Cases : CASE . '(' Expr ')' '{' CaseStmtList DefaultStmt '}'  (93)

	'('  shift 111
	.  error


state 65
	Super : SUPER .  (85)

	.  reduce 85


state 66
	Expr : DCOPY . '(' Expr ')'  (78)

	'('  shift 112
	.  error


state 67
	Expr : SCOPY . '(' Expr ')'  (79)

	'('  shift 113
	.  error


state 68
	Expr : RE . Expr  (80)
	Receiver : .  (46)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46

	LValue  goto 98
	Expr  goto 114
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	Super  goto 93
	Cases  goto 94


state 69
	Expr : IM . Expr  (81)
	Receiver : .  (46)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 65
	DCOPY  shift 66
	SCOPY  shift 67
	RE  shift 68
	IM  shift 69
	COMPCAST  shift 74
	IDENTIFIER  reduce 46
